Version 0.4.0-dev
- raised minimal required version of symfony/options-resolver to 4.0.0
- marked class Generator as final

Version 0.3.0
- raised minimal version of PHP to 7.1
- added dependency on symfony/options-resolver
- it is now possible to include stylesheets and scripts in generated pages
- Generator no longer tries to guess source and output folders
- added events onBeforeGenerate, onAfterGenerate and onCreatePage to Generator
- introduced meta normalizers for Generator
- local image mentioned in pages are now copied to output folder

Version 0.2.0
- raised minimal version of PHP to 7
- empty line at end of source files is ignored now
- generated pages no longer contain empty <title> if the title is not defined

Version 0.1.0
- initial version