@@ -1,6 +1,7 @@
 Version 0.4.0-dev
 - raised minimal required version of symfony/options-resolver to 4.0.0
 - marked class Generator as final
+- files to process are now stored in publicly readable property Generator::$filesToProcess
 
 Version 0.3.0
 - raised minimal version of PHP to 7.1
